--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                                         </ul>
                                     </div>
                                     <div class="modal-footer">
-                                        <a href="https://mocell-app.herokuapp.com/"><button type="button" class="btn btn-danger" data-dismiss="modal">Get Code</button></a>
+                                        <a href="https://github.com/akkotnala/Mocell"><button type="button" class="btn btn-danger" data-dismiss="modal">Get Code</button></a>
                                         <a href="https://mocell-app.herokuapp.com/"><button type="button" class="btn btn-danger">Live Preview</button></a>
                                     </div>
                                 </div>
@@ -245,8 +245,8 @@
                                         <div>5.	S - Movie title to search for.</div>
                                     </div>
                                     <div class="modal-footer">
-                                        <a href="https://mocell-app.herokuapp.com/"><button type="button" class="btn btn-default" data-dismiss="modal">Get Code</button></a>
-                                        <a href="https://mocell-app.herokuapp.com/"><button type="button" class="btn btn-primary">Live Preview</button></a>
+                                        <a href="https://github.com/akkotnala/Mosovi"><button type="button" class="btn btn-danger" data-dismiss="modal">Get Code</button></a>
+                                        <a href="https://github.com/akkotnala/Mosovi"><button type="button" class="btn btn-danger">Live Preview</button></a>
                                     </div>
                                 </div>
                             </div>
@@ -261,6 +261,12 @@
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
             <div class="my-auto">
                 <h2 class="mb-5">Skills</h2>
+                  <p>•	Front End Languages:  HTML, CSS, JavaScript, jQuery, Jade</p>
+                    <p>•	Frameworks: AngularJS, Bootstrap, D3.js.</p>
+                    <p>•	Back End Languages: JavaScript, Java, PHP, C, C#, VB Script</p>
+                    <p>•	Databases: MySQL, MongoDB, OracleDB</p>
+                    <p>•	Server-Side Languages: Node.js, Express.js, ASP.Net</p>
+                    <p>•	Tools: Visual Studio, Eclipse, MySQL Work Bench, XAMPP, Android Studio, Brackets, Word Press, Application Life Cycle Manager (ALM), Quick Test Professional (QTP), Adobe Photoshop, Adobe Creative Cloud (Adobe CC)</p>
 
                 <div class="subheading mb-3">Programming Languages &amp; Tools</div>
                 <ul class="list-inline dev-icons">
