--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@
                             </div>
                         </div>
                     </div>
+                    
                     <div class="col-lg-4 col-sm-6 portfolio-item">
                         <div id="btnShow1" class="card h-100">
                             <a><img class="card-img-top" src="" alt=""></a>
@@ -246,7 +247,37 @@
                                     </div>
                                     <div class="modal-footer">
                                         <a href="https://github.com/akkotnala/Mosovi"><button type="button" class="btn btn-danger" data-dismiss="modal">Get Code</button></a>
-                                        <a href="https://github.com/akkotnala/Mosovi"><button type="button" class="btn btn-danger">Live Preview</button></a>
+                                        <a href="https://happy-neumann-30c81b.netlify.com/"><button type="button" class="btn btn-danger">Live Preview</button></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>  
+                    
+                    <div class="col-lg-4 col-sm-6 portfolio-item">
+                        <div id="btnShow1" class="card h-100">
+                            <a><img class="card-img-top" src="" alt=""></a>
+                            <div class="card-body">
+                                <h4 class="card-title">
+                                    <a id="btnShow1" href="#btnShow1">Calculator</a>
+                                </h4>
+                                <p class="card-text"></p>
+                            </div>
+                        </div>
+                        <!-- Modal -->
+                        <div class="modal fade" id="demoModal1" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                        <h4 class="modal-title" id="myModalLabel"></h4>
+                                    </div>
+                                    <div class="modal-body">
+                                        <div>Simple Calculator using JavaScript</div>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <a href="https://github.com/akkotnala/calculator"><button type="button" class="btn btn-danger" data-dismiss="modal">Get Code</button></a>
+                                        <a href="https://keen-raman-b35c1e.netlify.com/"><button type="button" class="btn btn-danger">Live Preview</button></a>
                                     </div>
                                 </div>
                             </div>
