--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <h1 class="mb-0">Abhishek
                     <span class="text-primary">Kotnala</span>
                 </h1>
-                <div class="subheading mb-5">76 Rockcliffe Drive, Kitchener, ON. N2R 1W6· (519) 729-6094 ·
+                <div class="subheading mb-5">1558 Highbrook Ave, ON. L5M4V8· (519) 729-6094 ·
                     <a href="mailto:akkotnala1995@gmail.com">akkotnala1995@gmail.com</a>
                 </div>
                 <p class="lead mb-5">I'm a Web Developer and a Designer with a background in Computer Engineering. I'm currently pursuing a Post Graduation in Web Design and Development at the Conestoga College.
@@ -292,12 +292,12 @@
         <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="skills">
             <div class="my-auto">
                 <h2 class="mb-5">Skills</h2>
-                  <p>•	Front End Languages:  HTML, CSS, JavaScript, jQuery, Jade</p>
+                    <p>•	Front End Languages:  HTML, CSS, JavaScript, jQuery, Jade</p>
                     <p>•	Frameworks: AngularJS, Bootstrap, D3.js.</p>
                     <p>•	Back End Languages: JavaScript, Java, PHP, C, C#, VB Script</p>
                     <p>•	Databases: MySQL, MongoDB, OracleDB</p>
                     <p>•	Server-Side Languages: Node.js, Express.js, ASP.Net</p>
-                    <p>•	Tools: Visual Studio, Eclipse, MySQL Work Bench, XAMPP, Android Studio, Brackets, Word Press, Application Life Cycle Manager (ALM), Quick Test Professional (QTP), Adobe Photoshop, Adobe Creative Cloud (Adobe CC)</p>
+                    <p>•	Tools: Visual Studio, Eclipse, MySQL Work Bench, XAMPP, Android Studio, Brackets, Word Press, Application Life Cycle Manager (ALM),             Quick Test Professional (QTP), Adobe Photoshop, Adobe Creative Cloud (Adobe CC)</p>
 
                 <div class="subheading mb-3">Programming Languages &amp; Tools</div>
                 <ul class="list-inline dev-icons">
