--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <h1 class="mb-0">Abhishek
                     <span class="text-primary">Kotnala</span>
                 </h1>
-                <div class="subheading mb-5">1558 Highbrook Ave, ON. L5M4V8· (519) 729-6094 ·
+                <div class="subheading mb-5">1558 Highbrook Ave, Mississagua ON. L5M4V8· (519) 729-6094 ·
                     <a href="mailto:akkotnala1995@gmail.com">akkotnala1995@gmail.com</a>
                 </div>
                 <p class="lead mb-5">I'm a Web Developer and a Designer with a background in Computer Engineering. I'm currently pursuing a Post Graduation in Web Design and Development at the Conestoga College.
