--- a/index.html
+++ b/index.html
@@ -201,7 +201,6 @@
                                     <div class="modal-body">
                                         <ul class="fa-ul mb-0">
                                             <li><i class="fa-li fa fa-check"></i>MoCell data-driven web application using Node.js, Express, AngularJS and Mongo.</li>
-                                            <li><i class="fa-li fa fa-check"></i>It is a fully functioning Angular web application in which I’ve used all layers of the MEAN stack to create MoCell</li>
                                             <li><i class="fa-li fa fa-check"></i>It is a fully functioning Angular web application in which I’ve used all layers of the MEAN stack to create MoCell.</li>
                                             <li><i class="fa-li fa fa-check"></i>It will also display Product name, Price, description, and a rating for each product.</li>
                                             <li><i class="fa-li fa fa-check"></i>Users will be able to submit ratings and reviews.</li>
@@ -210,7 +209,7 @@
                                         </ul>
                                     </div>
                                     <div class="modal-footer">
-                                        <a href="https://github.com/akkotnala/Mocell"><button type="button" class="btn btn-danger" data-dismiss="modal">Get Code</button></a>
+                                        <a href="https://github.com/akkotnala/Mocell"><button type="button" class="btn btn-danger">Get Code</button></a>
                                         <a href="https://mocell-app.herokuapp.com/"><button type="button" class="btn btn-danger">Live Preview</button></a>
                                     </div>
                                 </div>
@@ -246,7 +245,7 @@
                                         <div>5.	S - Movie title to search for.</div>
                                     </div>
                                     <div class="modal-footer">
-                                        <a href="https://github.com/akkotnala/Mosovi"><button type="button" class="btn btn-danger" data-dismiss="modal">Get Code</button></a>
+                                        <a href="https://github.com/akkotnala/Mosovi"><button type="button" class="btn btn-danger">Get Code</button></a>
                                         <a href="https://happy-neumann-30c81b.netlify.com/"><button type="button" class="btn btn-danger">Live Preview</button></a>
                                     </div>
                                 </div>
@@ -276,7 +275,7 @@
                                         <div>Simple Calculator using JavaScript</div>
                                     </div>
                                     <div class="modal-footer">
-                                        <a href="https://github.com/akkotnala/calculator"><button type="button" class="btn btn-danger" data-dismiss="modal">Get Code</button></a>
+                                        <a href="https://github.com/akkotnala/calculator"><button type="button" class="btn btn-danger">Get Code</button></a>
                                         <a href="https://keen-raman-b35c1e.netlify.com/"><button type="button" class="btn btn-danger">Live Preview</button></a>
                                     </div>
                                 </div>
