--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <div class="subheading mb-5">1558 Highbrook Ave, Mississagua ON. L5M4V8· (519) 729-6094 ·
                     <a href="mailto:akkotnala1995@gmail.com">akkotnala1995@gmail.com</a>
                 </div>
-                <p class="lead mb-5">I'm a Web Developer and a Designer with a background in Computer Engineering. I'm currently pursuing a Post Graduation in Web Design and Development at the Conestoga College.
+                <p class="lead mb-5">I'm a Web Developer and a Designer with a background in Computer Engineering. I've completed my Post Graduation in Web Design and Development at the Conestoga College.
                     <br /> With a strong background in multiple web technologies, agile methodologies, databases, and modern API's, I like to know what’s new going on with technology and I am curious to find the root of the problems and turn that knowledge into a tangible solution. My objective as a web developer is to have a firm understanding of programming, planning and design.</p>
                 <div class="social-icons">
                     <a href="https://www.linkedin.com/in/akkotnala">
