--- a/index.html
+++ b/index.html
@@ -411,8 +411,8 @@
                                         <i class="fa-li fa fa-check"></i>I designed and developed API’s to make service requests to my MongoDB Database.<br />
                                         <i class="fa-li fa fa-check"></i>I used Single Page Application (SPA) to develop this application.
                                     </p>
-                                    <a href="https://github.com/akkotnala/Mocell" target="_blank" type="button" class="btn btn-danger">Get Code</a>
-                                    <a href="https://mocell-app.herokuapp.com/" target="_blank" type="button" class="btn btn-danger">Live Preview</a>
+                                    <a href="https://github.com/akkotnala/Mocell" target="_blank" class="btn btn-danger">Get Code</a>
+                                    <a href="https://mocell-app.herokuapp.com/" target="_blank" class="btn btn-danger">Live Preview</a>
                                 </div>
                             </div>
                         </div>
@@ -447,8 +447,8 @@
                                         <i class="fa-li fa fa-check"></i>Send and Receive messages in a same room. Just share the room-name with other users.<br />
                                         <i class="fa-li fa fa-spinner" style="color: Tomato;"></i> Coming up: Delete messages and a user profile.
                                     </p>
-                                    <a href="https://github.com/akkotnala/chat-app" target="_blank" type="button" class="btn btn-danger">Get Code</a>
-                                    <a href="https://5ec225432723aa988aa5e755--compassionate-leakey-b6e46f.netlify.app/" target="_blank" type="button" class="btn btn-danger">Live Preview</a>
+                                    <a href="https://github.com/akkotnala/chat-app" target="_blank" class="btn btn-danger">Get Code</a>
+                                    <a href="https://5ec225432723aa988aa5e755--compassionate-leakey-b6e46f.netlify.app/" target="_blank" class="btn btn-danger">Live Preview</a>
                                 </div>
                             </div>
                         </div>
@@ -481,8 +481,8 @@
                                         <i class="fa-li fa fa-check"></i>The Search API allows you to search for content within the iTunes Store. <br />
                                         <i class="fa-li fa fa-check"></i>Search your favorite artist or music preview the song and click Buy.
                                     </p>
-                                    <a href="https://github.com/akkotnala/itunes" target="_blank" type="button" class="btn btn-danger">Get Code</a>
-                                    <a href="https://happy-hugle-a5935f.netlify.app/" target="_blank" type="button" class="btn btn-danger">Live Preview</a>
+                                    <a href="https://github.com/akkotnala/itunes" target="_blank" class="btn btn-danger">Get Code</a>
+                                    <a href="https://happy-hugle-a5935f.netlify.app/" target="_blank" class="btn btn-danger">Live Preview</a>
                                 </div>
                             </div>
                         </div>
@@ -520,8 +520,8 @@
                                         <i class="fa-li fa fa-check"></i>4. Plot – Return short or full plot.<br />
                                         <i class="fa-li fa fa-check"></i>5. S - Movie title to search for.<br />
                                     </p>
-                                    <a href="https://github.com/akkotnala/Mosovi" target="_blank" type="button" class="btn btn-danger">Get Code</a>
-                                    <a href="https://happy-neumann-30c81b.netlify.com/" target="_blank" type="button" class="btn btn-danger">Live Preview</a>
+                                    <a href="https://github.com/akkotnala/Mosovi" target="_blank" class="btn btn-danger">Get Code</a>
+                                    <a href="https://happy-neumann-30c81b.netlify.com/" target="_blank" class="btn btn-danger">Live Preview</a>
                                 </div>
                             </div>
                         </div>
@@ -557,8 +557,8 @@
                                         <i class="fa-li fa fa-check"></i>Used Angular on the frontend, NodeJS on the backend and MongoDB to store the application data.<br />
                                         <i class="fa-li fa fa-spinner" style="color: Tomato;"></i>Awaiting Development: Code available on Github<br />
                                     </p>
-                                    <a href="https://github.com/akkotnala/Task-Manager" target="_blank"type="button" class="btn btn-danger">Get Code</a>
-                                    <a href="" type="button" class="btn btn-danger disabled">Available Local</a>
+                                    <a href="https://github.com/akkotnala/Task-Manager" target="_blank"class="btn btn-danger">Get Code</a>
+                                    <a href="" class="btn btn-danger disabled">Available Local</a>
                                 </div>
                             </div>
                         </div>
@@ -595,8 +595,8 @@
                                         <i class="fa-li fa fa-check"></i>Used Angular Forms, dialogs (modals) and component interaction for better UI<br />
                                         <i class="fa-li fa fa-spinner" style="color: Tomato;"></i>Awaiting Development: Code available on Github<br />
                                     </p>
-                                    <a href="https://github.com/akkotnala/budget-app" type="button" class="btn btn-danger" target="_blank">Get Code</a>
-                                    <a href="" type="button" class="btn btn-danger disabled">Available Local</a>
+                                    <a href="https://github.com/akkotnala/budget-app" class="btn btn-danger" target="_blank">Get Code</a>
+                                    <a href="" class="btn btn-danger disabled">Available Local</a>
                                 </div>
                             </div>
                         </div>
@@ -629,8 +629,8 @@
                                         A game using Angular<br />
                                         <i class="fa-li fa fa-check"></i>Developed this Game using AngularJS. Try to Win!<br />
                                     </p>
-                                    <a href="https://github.com/akkotnala/Tic-Tac-Toe" target="_blank" type="button" class="btn btn-danger">Get Code</a>
-                                    <a href="https://taskmanager-29dac.web.app/" target="_blank" type="button" class="btn btn-danger">Live Preview</a>
+                                    <a href="https://github.com/akkotnala/Tic-Tac-Toe" target="_blank" class="btn btn-danger">Get Code</a>
+                                    <a href="https://taskmanager-29dac.web.app/" target="_blank" class="btn btn-danger">Live Preview</a>
                                 </div>
                             </div>
                         </div>
@@ -664,8 +664,8 @@
                                         A game using JavaScript<br />
                                         <i class="fa-li fa fa-check"></i>Try to beat the Highest score!! As all our penguins (and yeti) hidden let’s play the game! Find a friend or a family member and challenge them to find all the penguins without accidently clicking on the yeti.<br />
                                     </p>
-                                    <a href="https://github.com/akkotnala/Find-The-Penguins" target="_blank" type="button" class="btn btn-danger">Get Code</a>
-                                    <a href="https://pedantic-galileo-42a2bc.netlify.app/" target="_blank" type="button" class="btn btn-danger">Live Preview</a>
+                                    <a href="https://github.com/akkotnala/Find-The-Penguins" target="_blank" class="btn btn-danger">Get Code</a>
+                                    <a href="https://pedantic-galileo-42a2bc.netlify.app/" target="_blank" class="btn btn-danger">Live Preview</a>
                                 </div>
                             </div>
                         </div>
@@ -698,8 +698,8 @@
                                     <p class="mb-5">
                                         Simple Calculator using JavaScript<br />
                                     </p>
-                                    <a href="https://github.com/akkotnala/calculator" target="_blank" type="button" class="btn btn-danger">Get Code</a>
-                                    <a href="https://keen-raman-b35c1e.netlify.com/" target="_blank" type="button" class="btn btn-danger">Live Preview</a>
+                                    <a href="https://github.com/akkotnala/calculator" target="_blank" class="btn btn-danger">Get Code</a>
+                                    <a href="https://keen-raman-b35c1e.netlify.com/" target="_blank" class="btn btn-danger">Live Preview</a>
                                 </div>
                             </div>
                         </div>
@@ -737,7 +737,7 @@
                                         <i class="fa-li fa fa-spinner" style="color: Tomato;"></i>Awaiting Development: Code available on Github
                                     </p>
                                     <a href="https://github.com/akkotnala/satellite" target="_blank">Get Code</a>
-                                    <a href="" type="button" class="btn btn-danger disabled">Available Local</a>
+                                    <a href="" class="btn btn-danger disabled">Available Local</a>
                                 </div>
                             </div>
                         </div>
