--- a/index.html
+++ b/index.html
@@ -99,6 +99,16 @@
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
                         <h3 class="mb-0">Web Developer</h3>
+                        <div class="subheading mb-3">TRUXCO</div>
+                        <p>Developing E-commerce website and components that meet the quality and standard. Along with Digital Marketing.</p>
+                    </div>
+                    <div class="resume-date text-md-right">
+                        <span class="text-primary">JUNE 2020 – *</span>
+                    </div>
+                </div>         
+                <div class="resume-item d-flex flex-column flex-md-row mb-5">
+                    <div class="resume-content mr-auto">
+                        <h3 class="mb-0">Web Developer</h3>
                         <div class="subheading mb-3">WORKLABS</div>
                         <p>Responsible for creating, maintaining, expanding, and scaling webpages and web applications under the supervision of senior developers.</p>
                     </div>
