--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div class="resume-item d-flex flex-column flex-md-row mb-5">
                     <div class="resume-content mr-auto">
                         <h3 class="mb-0">Web Developer</h3>
-                        <div class="subheading mb-3">TRUXCO</div>
+                        <div class="subheading mb-3">Legend Tire</div>
                         <p>Developing E-commerce website and components that meet the quality and standard. Along with Digital Marketing.</p>
                     </div>
                     <div class="resume-date text-md-right">
